More fixes to sidebar docs
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/sidebarAction.html
+++ b/sidebarAction.html
@@ -144,26 +144,26 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 										</td>
 									</tr>
 									<tr>
-										<td><a href="#method-setBadgeText">setBadgeText</a> −
+										<td><a href="#method-setBadgeText">setBadgeText</a> (Not supported on mac yet) −
 											<code class="prettyprint"> opr.sidebarAction.setBadgeText(
 												<span>object details</span>) </code>
 										</td>
 									</tr>
 									<tr>
-										<td><a href="#method-getBadgeText">getBadgeText</a> −
+										<td><a href="#method-getBadgeText">getBadgeText</a> (Not supported on mac yet) −
 											<code class="prettyprint"> opr.sidebarAction.getBadgeText(
 												<span>object details</span>,
 												<span>function callback</span>) </code>
 										</td>
 									</tr>
 									<tr>
-										<td><a href="#method-setBadgeBackgroundColor">setBadgeBackgroundColor</a> −
+										<td><a href="#method-setBadgeBackgroundColor">setBadgeBackgroundColor</a> (Not supported on mac yet) −
 											<code class="prettyprint"> opr.sidebarAction.setBadgeBackgroundColor(
 												<span>object details</span>) </code>
 										</td>
 									</tr>
 									<tr>
-										<td><a href="#method-getBadgeBackgroundColor">getBadgeBackgroundColor</a> −
+										<td><a href="#method-getBadgeBackgroundColor">getBadgeBackgroundColor</a> (Not supported on mac yet) −
 											<code class="prettyprint"> opr.sidebarAction.getBadgeBackgroundColor(
 												<span>object details</span>,
 												<span>function callback</span>) </code>
@@ -173,15 +173,11 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 										<th colspan="2">Events</th>
 									</tr>
 									<tr>
-										<td><a href="#event-onClicked">onClicked</a>
+										<td><a href="#event-onFocus">onFocus</a> (Not supported on mac yet)
 										</td>
 									</tr>
 									<tr>
-										<td><a href="#event-onFocus">onFocus</a>
-										</td>
-									</tr>
-									<tr>
-										<td><a href="#event-onBlur">onBlur</a>
+										<td><a href="#event-onBlur">onBlur</a> (Not supported on mac yet)
 										</td>
 									</tr>
 								</tbody>
@@ -471,7 +467,7 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 									</div>
 								</div>
 								<div>
-									<h3 id="method-setBadgeText">setBadgeText </h3>
+									<h3 id="method-setBadgeText">setBadgeText (Not supported on mac yet)</h3>
 									<div class="summary">
 										<code class="prettyprint"> opr.sidebarAction.setBadgeText(
 											<span>object details</span>) </code>
@@ -513,7 +509,7 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 									</div>
 								</div>
 								<div>
-									<h3 id="method-getBadgeText">getBadgeText </h3>
+									<h3 id="method-getBadgeText">getBadgeText (Not supported on mac yet)</h3>
 									<div class="summary">
 										<code class="prettyprint"> opr.sidebarAction.getBadgeText(
 											<span>object details</span>,
@@ -570,7 +566,7 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 									</div>
 								</div>
 								<div>
-									<h3 id="method-setBadgeBackgroundColor">setBadgeBackgroundColor </h3>
+									<h3 id="method-setBadgeBackgroundColor">setBadgeBackgroundColor (Not supported on mac yet)</h3>
 									<div class="summary">
 										<code class="prettyprint"> opr.sidebarAction.setBadgeBackgroundColor(
 											<span>object details</span>) </code>
@@ -616,7 +612,7 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 									</div>
 								</div>
 								<div>
-									<h3 id="method-getBadgeBackgroundColor">getBadgeBackgroundColor </h3>
+									<h3 id="method-getBadgeBackgroundColor">getBadgeBackgroundColor (Not supported on mac yet)</h3>
 									<div class="summary">
 										<code class="prettyprint"> opr.sidebarAction.getBadgeBackgroundColor(
 											<span>object details</span>,
@@ -676,7 +672,7 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 								<h2 id="events">Events</h2>
 								<div>
 								<div>
-									<h3 id="event-onFocus">onFocus</h3>
+									<h3 id="event-onFocus">onFocus (Not supported on mac yet)</h3>
 									<div class="description">
 										<p>When the panel becomes in focus (user clicks inside the panel).</p>
 
@@ -720,7 +716,7 @@ You can also specify a series of sizes and icon paths as keys and values, instea
 									</div>
 								</div>
 								<div>
-									<h3 id="event-onBlur">onBlur</h3>
+									<h3 id="event-onBlur">onBlur (Not supported on mac yet)</h3>
 									<div class="description">
 										<p>When panel loses focus when the user clicks on the webpage (or any other area outside the panel), thereby the panel loses focus.
 										</p>
